design fixes-overflow

--- a/wp-content/themes/mihsa/assets/css/custom.scss
+++ b/wp-content/themes/mihsa/assets/css/custom.scss
@@ -143,6 +143,7 @@ textarea {
 * {
 	margin: 0;
 	padding: 0;
+	;
 }
 body {
 	max-width: 100vw;
@@ -380,7 +381,7 @@ nav[data-sm] {
 			gap: 0.4rem;
 			align-items: center;
 			span {
-				width: max-content;
+				width: fit-content;
 			}
 		}
 	}
@@ -434,7 +435,7 @@ nav[data-sm] {
 	height: auto;
 }
 @mixin button {
-	width: max-content;
+	width: fit-content;
 	white-space: nowrap;
 	padding-block: 0.75rem;
 	margin-block: 1rem;
@@ -742,7 +743,7 @@ footer {
 	}
 	span:nth-child(2) {
 		font-size: var(--bannerLgFontSize);
-		// width: max-content;
+		// width: fit-content;
 	}
 	span:nth-child(3) {
 		font-size: var(--bannerSmFontSize);
@@ -860,7 +861,7 @@ section:has(.testimonialGrid) {
 	// row-gap: 2rem;
 	// column-gap: 1rem;
 	// @media screen and (min-width: 768px) {
-	// 	grid-template-columns: repeat(auto-fit, min(1fr, max-content));
+	// 	grid-template-columns: repeat(auto-fit, min(1fr, fit-content));
 	// }
 	display: flex;
 	row-gap: 2rem;
@@ -876,7 +877,7 @@ section:has(.testimonialGrid) {
 	.grid-item {
 		display: grid;
 		gap: 1rem;
-		height: max-content;
+		height: fit-content;
 	}
 	.newsletterTitle {
 		font-size: var(--newsLeterHeading);
@@ -1206,6 +1207,7 @@ form[data-name='Newsletter'] .mc4wp-form-fields {
 		background-color: var(--service-bg-color);
 		padding: 2rem;
 		color: var(--contentGrey);
+		box-sizing: border-box;
 		ul {
 			--gap: calc(24rem / 16);
 			list-style-position: inside;
@@ -1691,7 +1693,7 @@ input:has(+ .wpcf7-not-valid-tip) {
 	transition: opacity 300ms ease-in-out;
 	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 	opacity: 0;
-	width: max-content;
+	width: fit-content;
 	text-transform: capitalize;
 }
 li:has(> .dropdown-menu) {
